--- a/src/pages/HomePage/_homePage.scss
+++ b/src/pages/HomePage/_homePage.scss
@@ -1,6 +1,8 @@
 .home-page {
   .wellcome {
-    width: 50%;
+    @media only screen and (min-width: 768px) {
+      width: 50%;
+    }
     margin: auto;
     margin-top: 6%;
     background-color: #a0d1fa4f;
