--- a/src/pages/PasswordsDisplay/_passwordsDisplay.scss
+++ b/src/pages/PasswordsDisplay/_passwordsDisplay.scss
@@ -9,6 +9,16 @@
       .p-button-warning {
         border: 1px solid black;
         border-left: none;
+      } 
+    }
+    .p-paginator-pages {
+      @media only screen and (max-width: 576px) {
+        display: none;
+      }
+    }
+    .p-paginator-first, .p-paginator-last {
+      @media only screen and (max-width: 375px) {
+        display: none;
       }
     }
   }
